# IOT-risk-assessment-mas

./: .cursorrule  .gitignore  COMPREHENSIVE_DOCUMENTATION.md  COMPREHENSIVE_DOCUMENTATION.txt  DEPLOYMENT.md  GITHUB_SETUP.md  LIMITATIONS.md  PROJECT_STRUCTURE.md  PROJECT_STRUCTURE_CLEAN.md  README.md  README_DEPLOYMENT.md  pyproject.toml  requirements.txt
analysis/: README.md
analysis/docs/: CHALLENGER_AGREEMENT_ANALYSIS.md  EVALUATION_RESULTS_SUMMARY.md  EVALUATION_RESULTS_SUMMARY_EN.md  EVALUATION_RESULTS_SUMMARY_HUMAN_AI_VALIDATION.md  (+3 more)
docs/: API_KEYS.md  DIAGRAM_GUIDE.md  DUAL_FACTOR_ASSESSMENT_UPDATE.md  HUMAN_ESCALATION.md  LIKELIHOOD_FREQUENCY_ALIGNMENT.md  LOGGING_AND_RESULTS.md  README.md  SYSTEM_OUTPUT_REFERENCE.md
evaluation_inputs/: README.md  scenario_10_data_security_secondhand_market.txt  scenario_11_environmental_toxicity.txt  scenario_1_protocol_weaknesses.txt  scenario_2_remote_direct_control.txt  scenario_3_user_awareness_risk.txt  scenario_4_data_hacking_breaching.txt  scenario_5_mass_data_inference.txt  scenario_6_lack_of_continuous_updates.txt  scenario_7_cloud_dependency.txt  scenario_8_iot_as_medium_for_broader_network_attacks.txt  scenario_9_physical_safety_fire_hazards.txt
examples/: __init__.py  test_full_workflow.py  test_individual_agents.py
scripts/: README.md  analyze_pass_rate.py  cost_estimator.py  formal_assessment.py  measure_time.py  populate_rag_database.py  quick_test.py  show_results.py  test_setup.py  test_system_health.py  time_analysis.py
src/: __init__.py  config.py  graph.py  main.py  schemas.py
(+38 files in other folders)
